--- a/my_form.css
+++ b/my_form.css
@@ -5,7 +5,7 @@ h1{
 }
 .body {
     font-size: 12px;
-    background-image: url("t%C3%A9l%C3%A9charger%20(20).jpg");
+    background-image:url('t%C3%A9l%C3%A9charger%20(20).jpg');
     font-family: 'Orbitron', sans-serif;
 }
 
