--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h1{
     border-style: ridge;
     border-color: black;
 }
-.body {
+body {
     font-size: 12px;
     background-image:url('t%C3%A9l%C3%A9charger%20(20).jpg');
     font-family: 'Orbitron', sans-serif;
@@ -13,7 +13,7 @@ h1{
     text-align: 150px;
 }
 
-label{
+label {
     text-align:left;
     width : 150px;
     display: inline-block;
