--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1{
 }
 .body {
     font-size: 12px;
-    background-image: url("https://i1.wp.com/www.estidia.eu/wp-content/uploads/2018/04/Savin-NY-Website-Background-Web.jpg?fit=848%2C477&ssl=1");
+    background-image: url("");
 
 }
 
