--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
+
+header {
+
+
+}
+
+
 h1{
     text-align: center;
     border-style: ridge;
