--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 
 header {
 font-family: 'Orbitron', sans-serif;
+color: white;
 
 }
 
@@ -14,7 +15,7 @@ h1{
 .body {
     font-size: 12px;
     font-family: 'Orbitron', sans-serif;
-    background-image: url("");
+    background-image: url("t%C3%A9l%C3%A9charger%20(21).jpg");
 
 }
 
