--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 header {
 font-family: 'Orbitron', sans-serif;
 color: white;
+ background-image: url('t%C3%A9l%C3%A9charger%20(21).jpg');
 
 }
 
@@ -15,7 +16,7 @@ h1{
 .body {
     font-size: 12px;
     font-family: 'Orbitron', sans-serif;
-    background-image: url("t%C3%A9l%C3%A9charger%20(21).jpg");
+    background-image: url('t%C3%A9l%C3%A9charger%20(21).jpg');
 
 }
 
