--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 header {
 font-family: 'Orbitron', sans-serif;
 color: white;
- background-image: url('t%C3%A9l%C3%A9charger%20(21).jpg');
+ background-image: url('');
 
 }
 
@@ -23,7 +23,8 @@ h1{
 .body {
     font-size: 12px;
     font-family: 'Orbitron', sans-serif;
-    background-image: url('t%C3%A9l%C3%A9charger%20(21).jpg');
+    background-image: url('');
+    background-color:
 
 }
 
