--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 header {
 font-family: 'Orbitron', sans-serif;
 color: white;
- background-image: url('');
+ background-image: url('t%C3%A9l%C3%A9charger%20(22).jpg');
 
 }
 
@@ -23,7 +23,7 @@ h1{
 .body {
     font-size: 12px;
     font-family: 'Orbitron', sans-serif;
-    background-image: url('');
+    background-image: url('t%C3%A9l%C3%A9charger%20(22).jpg');
     background-color:
 
 }
@@ -41,6 +41,7 @@ label{
 .form-a{
     border-radius:2px; 
     border-style: dotted; border-color: blue;
+    background-image:url('t%C3%A9l%C3%A9charger%20(22).jpg');
 
 }
 .validation{
