--- a/style.css
+++ b/style.css
@@ -20,11 +20,11 @@ h1{
     border-style: ridge;
     border-color: black;
 }
-.body {
+body {
     font-size: 12px;
     font-family: 'Orbitron', sans-serif;
     background-image: url('t%C3%A9l%C3%A9charger%20(22).jpg');
-    background-color:
+    background-color:silver;
 
 }
 
