--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
 header {
 font-family: 'Orbitron', sans-serif;
 color: white;
- background-image: src('t%C3%A9l%C3%A9charger%20(22).jpg');
+ background-image: src('');
+ backgroun-color:silver;
 
 }
 
@@ -23,7 +24,7 @@ h1{
 body {
     font-size: 12px;
     font-family: 'Orbitron', sans-serif;
-    background-image: url('t%C3%A9l%C3%A9charger%20(22).jpg');
+    background-image: url('');
     background-color:silver;
 
 }
