--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h1{
     text-align: center;
     border-style: ridge;
     border-color: black;
+    color:white;
 }
 body {
     font-size: 12px;
