--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
 font-family: 'Orbitron', sans-serif;
 color: white;
  background-image: src('');
- backgroun-color:silver;
+ background-color:;
 
 }
 
@@ -26,7 +26,7 @@ body {
     font-size: 12px;
     font-family: 'Orbitron', sans-serif;
     background-image: url('');
-    background-color:silver;
+    background-color:;
 
 }
 
