--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1{
 body {
     font-size: 12px;
     font-family: 'Orbitron', sans-serif;
-    background-image: url('');
+    background-image: url('t%C3%A9l%C3%A9charger%20(23).jpg');
     background-color:;
 
 }
@@ -45,7 +45,8 @@ label{
     border-radius:2px; 
     border-style: dotted; border-color: blue;
     background-image:url('');
-    color:white;
+    color:blue;
+    background-color:white;
 
 }
 .validation{
