--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ label{
     border-style: dotted; border-color: blue;
     background-image:url('');
     color:blue;
-    background-color:white;
+    background-color:silver;
 
 }
 .validation{
