--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
 font-family: 'Orbitron', sans-serif;
 color: white;
  background-image: src('');
- background-color:;
+ background-color:silver;
 
 }
 
