--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@ label{
     border-radius:2px; 
     border-style: dotted; border-color: blue;
     background-image:url('');
-    color:blue;
-    background-color:silver;
+    color:white;
+    background-color:blue;
 
 }
 .validation{
