--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1{
 body {
     font-size: 12px;
     font-family: 'Orbitron', sans-serif;
-    background-image: url('4k-wallpaper-aluminum-architectural-architecture.jpg');
+    background-image: url('');
     background-color:;
 
 }
